--- a/Layout 1, inpage nav/index.html
+++ b/Layout 1, inpage nav/index.html
@@ -16,10 +16,10 @@
         </aside>
         <div class="contentContainer">            
             <div class="content__nav">
-                lost
+                <!-- lost -->
             </div>
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio suscipit quia id enim neque natus, a voluptate quidem tempore, hic dolorum reiciendis voluptatum libero laborum nobis perferendis voluptatibus sunt pariatur veniam quas dolores architecto? Vel, sed. Et dolorem beatae repellat nam repellendus laboriosam quisquam illo eveniet provident maiores! Ut, quisquam!</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio suscipit quia id enim neque natus, a voluptate quidem tempore, hic dolorum reiciendis voluptatum libero laborum nobis perferendis voluptatibus sunt pariatur veniam quas dolores architecto? Vel, sed. Et dolorem beatae repellat nam repellendus laboriosam quisquam illo eveniet provident maiores! Ut, quisquam!</p> -->
             </div>
         </div>
     </main>
