--- a/Layout 2/index.html
+++ b/Layout 2/index.html
@@ -9,20 +9,29 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header__content"></div>
+    </header>
     <main>
-        <aside class="a">
-            <div class="aside__content"></div>
-        </aside>
-        <div class="contentContainer">            
-            <div class="content__nav">
+        <div class="main__content">            
+            <div class="main__nav">
                 <!-- lost -->
             </div>
-            <div class="content">
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio suscipit quia id enim neque natus, a voluptate quidem tempore, hic dolorum reiciendis voluptatum libero laborum nobis perferendis voluptatibus sunt pariatur veniam quas dolores architecto? Vel, sed. Et dolorem beatae repellat nam repellendus laboriosam quisquam illo eveniet provident maiores! Ut, quisquam!</p> -->
+            <div class="main__sectionContainer">
+                <section class="main__section">
+                    <div class="section__content"></div>
+                </section>
+                <section class="main__section">
+                    <div class="section__content"></div>
+                </section>
+                <section class="main__section">
+                    <div class="section__content"></div>
+                </section>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer__content"></div>
+    </footer>
 </body>
 </html>
