--- a/Layout 1/index.html
+++ b/Layout 1/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laoyuts</title>
+    <title>Laoyut 1</title>
 
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header__content"></div>
+    </header>
     <main>
-        <aside class="a">
+        <aside>
             <div class="aside__content"></div>
         </aside>
         <div class="contentContainer">            
