--- a/Layout 1, inpage nav/index.html
+++ b/Layout 1, inpage nav/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header__content">
+        </div>
+    </header>
     <main>
         <aside class="a">
             <div class="aside__content"></div>
@@ -23,6 +26,9 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer__content">
+        </div>
+    </footer>
 </body>
 </html>
